# beam-cert-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml  justfile  submit.html
.github/workflows/: build.yml  rust_security.yml
.zed/: settings.json
assets/: main.css
src/: main.rs  server.rs  tasks.rs
